--- a/react/package.json
+++ b/react/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "jquery": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fullpage-custom-loader": "^0.1.6",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactjs-overlay-loader": "^1.0.4",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
