--- a/react/package.json
+++ b/react/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "datatables.net": "^1.13.4",
+    "datatables.net-dt": "^1.13.4",
     "jquery": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
