--- a/react/package.json
+++ b/react/package.json
@@ -13,12 +13,11 @@
     "jquery": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-fullpage-custom-loader": "^0.1.6",
-    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-overlay-loader": "^1.0.4",
     "sweetalert": "^2.1.2",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
