--- a/react/package.json
+++ b/react/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.16"
+    "@types/jquery": "^3.5.16",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
