--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactecom",
+  "name": "Sub4Data",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "dotenv": "^16.1.4"
   }
 }
