--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,7 @@
   "name": "Sub4Data",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://sub4data.com.ng/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -23,8 +23,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
