--- a/react/package.json
+++ b/react/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^1.6.7",
     "bootstrap": "^5.0.1",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "reactjs-overlay-loader": "^1.0.4",
     "sweetalert": "^2.1.2",
     "toastify-js": "^1.12.0",
