--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.0.1",
+    "crypto-js": "^4.2.0",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
     "jquery": "^3.7.0",
