--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,14 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=sub4data
+DB_USERNAME=root
+DB_PASSWORD=
+
+#DB_CONNECTION=sqlite
 #DB_HOST=127.0.0.1
 #DB_PORT=3306
 #DB_DATABASE=database
@@ -19,8 +26,10 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DRIVER=cookie
+SESSION_DOMAIN=0.0.0.0
+SANCTUM_STATEFUL_DOMAINS=0.0.0.0
 
 MEMCACHED_HOST=127.0.0.1
 
