--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "Sub4Data",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sub4data.com.ng/",
+  "homepage": "https://127.21.128.1/sub4data-web-2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -19,12 +19,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "reactjs-overlay-loader": "^1.0.4",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.6",
     "toastify-js": "^1.12.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0 --port 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
