IP whitelisting integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "labelledby",
         "LARAVEL",
         "Reactjs",
-        "Swal.fire",
+        "Sub4Data",
+        "Swal",
         "sweetalert",
         "Toastify"
     ]
