--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "datatables.net-dt": "^1.13.4",
     "jquery": "^3.7.0",
     "react": "^17.0.2",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
@@ -24,7 +25,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start --host 0.0.0.0 --port 3000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
