discount and updates

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ REACT_APP_EMAIL = sub4data@gmail.com
 REACT_APP_ADDRESS = Opposite Ayoni oo, Otegbeye Street, Oke-Aro, Akure, Ondo State, Nigeria
 REACT_APP_URL = http://localhost:8000/
 REACT_APP_YEAR = 2024
+REACT_APP_ENV = dev
