--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Activities",
         "labelledby",
         "LARAVEL",
+        "NEVN",
         "Reactjs",
         "Sub4Data",
         "Swal",
