--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Sub4Data",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -9,24 +9,24 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.0.1",
-    "crypto-js": "^4.2.0",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
     "jquery": "^3.7.0",
-    "react": "^17.0.2",
+    "react": "^16.0.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.0.0",
+    "react-gtm-module": "^2.0.11",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "reactjs-overlay-loader": "^1.0.4",
-    "sweetalert2": "^11.10.6",
+    "sweetalert2": "^11.6.13",
     "toastify-js": "^1.12.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
