--- a/backend/.env
+++ b/backend/.env
@@ -16,7 +16,7 @@ DB_USERNAME=laravel_user
 DB_PASSWORD=password
 #
 APP_URL=http://127.0.0.1:8000
-ALLOWED_ORIGINS=http://127.0.0.1:3000
+ALLOWED_ORIGINS=http://127.0.0.1:3000,http://192.168.1.120:3000
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
